aptina-beans-it/src/main/java/example/errors/EnumBeanState.java
package example.errors;

import org.seasar.aptina.beans.BeanState;

/**
 * 
 * @author koichik
 */
@BeanState
public enum EnumBeanState {

}
